--- a/web/index.html
+++ b/web/index.html
@@ -34,6 +34,10 @@
   
   <!-- Google Maps JavaScript API -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkqsRwb7_CgiOw2H0auTBIfyKWQQjPEBw"></script>
+
+  <!-- Google Sign-In Client ID (Required for Web) -->
+  <!-- Replace YOUR_CLIENT_ID with the actual "Web client ID" from Google Cloud Console -->
+  <meta name="google-signin-client_id" content="723962598173-a8qvlla88l182d7vff8mtnvi0rigpn7e.apps.googleusercontent.com">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
